--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 2vh;
+  font-size: 2vh !important;
 }
 
 code {
